[package]
name = "lemo"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.11", features = [
    "esp32c6",
    "exception-handler",
    "println",
] }
esp-hal = { version = "0.16", features = [ "esp32c6" ] }
esp-println = { version = "0.9", features = ["esp32c6"] }
esp-wifi = { version = "0.4", features = [
    "esp32c6",
    "phy-enable-usb",
    "utils",
    "wifi-default",
] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

